添加自定义样式

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,7 +1,7 @@
 @media screen and (min-width:1200px) {
 
   body {
-    background-image:url(/images/background.jpg);
+    background-image:url(https://image.eelve.com/eblog/background.jpg);
     background-repeat: no-repeat;//是否重复平铺
     background-attachment:fixed;//是否随着网页上下滚动而滚动，fixed为固定
     background-position:50% 50%;//图片位置
